# handoff-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lefthook.yml  package.json
.claude-plugin/: marketplace.json
plugin/: README.md
plugin-hooks/.claude-plugin/: plugin.json
plugin-hooks/hooks/: hooks.json
plugin-task-loop/: README.md
plugin-task-loop/.claude-plugin/: plugin.json
plugin-task-loop/agents/: _bug-report-protocol.md  research-director.md  research-drafter.md  research-investigator.md  research-verifier.md  session-developer.md  session-integration-tester.md  session-reviewer.md  session-tester.md
plugin-task-loop/commands/: research-loop.md  session-loop.md
plugin-task-loop/workflows/: research-execute.js  session-execute.js
plugin-task-loop/workflows/lib/: context-injection.js  context-injection.test.js  profile.js  profile.test.js  session-execute.integration.test.js  (+4 more)
plugin/.claude-plugin/: plugin.json
scripts/: handoff-memory-hook.py  install-local.sh  postinstall.js  sync-plugin-skills.sh  sync-plugin-version.sh  sync-workflow-inline.sh
skills/handoff/: SKILL.md
skills/handoff-docs/: SKILL.md
skills/handoff-import/: SKILL.md
skills/handoff-load/: SKILL.md
skills/handoff-memory/: SKILL.md
skills/handoff-refer/: SKILL.md
src/: cli.rs  lib.rs  main.rs  setup.rs
src/context/: injection.rs  mod.rs
src/mcp/: mod.rs  protocol.rs  resources.rs  router.rs  tools.rs  types.rs
src/storage/: config.rs  git.rs  mod.rs  referrals.rs  sessions.rs  tasks.rs
templates/: claude-md-section.md
tests/: cli_api.rs  context_corpus_bench.rs  doc_migration_e2e.rs  doc_roundtrip.rs  doc_verify.rs  lexsim_similarity_audit.rs  mcp_protocol.rs  stdio_server.rs  storage_config.rs  storage_sessions.rs  storage_tasks.rs  task_checklist.rs  task_link_compat.rs  tool_dashboard.rs  tool_doc_graph.rs  tool_docs.rs  tool_docs_query.rs  tool_import_context.rs  tool_init.rs  tool_memory.rs  tool_nested_workspace.rs  tool_new_features.rs  tool_parity.rs  tool_referrals.rs  tool_sessions.rs  tool_tasks.rs  tool_timer.rs
(+47 files in other folders)
