[package]
name = "handoff-mcp"
version = "0.1.0"
edition = "2021"
description = "Local MCP server for AI session handoff automation"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
