[package]
name = "handoff-mcp"
version = "0.2.0"
edition = "2021"
description = "MCP server that gives AI coding agents persistent memory across sessions"
license = "MIT"
repository = "https://github.com/alphaelements/handoff-mcp"
homepage = "https://github.com/alphaelements/handoff-mcp"
readme = "README.md"
keywords = ["mcp", "ai", "claude", "handoff", "context"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"
exclude = ["lefthook.yml", "tmp/", "wiki/", "docs/", ".claude/", ".vscode/"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3.27.0"
